# evaluationToolForLLM

./: .gitignore  CMakeLists.txt  README.md  main.cpp  para.yaml
